<package format="3">
  <name>ccs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ravinas@todo.todo">ravinas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>rclcpp</depend>
    <depend>message_pkg</depend>

    <build_depend>builtin_interfaces</build_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>builtin_interfaces</exec_depend>
    <exec_depend>rosidl_default_generators</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
